# pytest-tolerance

./: LICENSE  README.rst  appveyor.yml  pytest_tolerance.py  setup.cfg  tox.ini
docs/: conf.py  index.rst
tests/: test_tolerance.py
