[metadata]
name = pytest-tolerance
version = 0.1.dev0
author = Juan Luis Cano Rodríguez
author_email = hello@juanlu.space
maintainer = Juan Luis Cano Rodríguez
maintainer_email = hello@juanlu.space
license = MIT
url = https://github.com/Juanlu001/pytest-tolerance
description = pytest plugin to optimize comparison tolerances
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
py_modules =
    pytest_tolerance
python_requires = >=3.6
install_requires =
    pytest>=3.6

[options.entry_points]
pytest11 = tolerance = pytest_tolerance
